--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PERSAUD AIRLINES - WingLink</title>
+
+  <!-- ✅ Favicon -->
+  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Persaud-Airlines/flight-planning/refs/heads/main/output-onlinepngtools%20(1).png">
+
   <link href="https://fonts.googleapis.com/css2?family=Oswald:ital,wght@1,400&display=swap" rel="stylesheet">
+
   <style>
     body {
       font-family: 'Oswald', sans-serif;
