--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   <header>
     <h1>PERSAUD AIRLINES - WingLink</h1>
     <hr>
-    <h2>NAVIGATIONAL FLIGHT PLANNING FORM & NAVIGATIONAL ON-BOARD DOCUMENT</h2>
+    <h2>AIRLINE PORTAL</h2>
   </header>
 
   <iframe src="https://docs.google.com/document/d/17O5D0rol6EfHXXsrdSZbG2p2Eo5OztSICoKN00WyA_Y/preview"></iframe>
