--- a/index.html
+++ b/index.html
@@ -126,17 +126,17 @@
     }
 
     .modal-content {
-      width: 90%;
-      max-width: 900px;
+      width: 95%;
+      max-width: 950px;
       background-color: #fff;
       border-radius: 10px;
-      padding: 10px;
+      padding: 15px;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
 
-    .modal iframe {
+    .modal embed {
       width: 100%;
       height: 80vh;
       border: none;
@@ -194,7 +194,7 @@
   <!-- Modal -->
   <div class="modal" id="docModal">
     <div class="modal-content">
-      <iframe id="pdfViewer" src=""></iframe>
+      <embed id="pdfPreview" type="application/pdf" src="">
       <div>
         <button class="download-btn" id="downloadBtn">Download</button>
         <button class="close-btn" onclick="closeModal()">Close</button>
@@ -214,7 +214,7 @@
 
     const grid = document.getElementById('docGrid');
     const modal = document.getElementById('docModal');
-    const pdfViewer = document.getElementById('pdfViewer');
+    const pdfPreview = document.getElementById('pdfPreview');
     const downloadBtn = document.getElementById('downloadBtn');
 
     docs.forEach(doc => {
@@ -226,14 +226,14 @@
     });
 
     function openModal(url) {
-      pdfViewer.src = url;
+      pdfPreview.src = url;
       downloadBtn.onclick = () => window.open(url, '_blank');
       modal.style.display = 'flex';
     }
 
     function closeModal() {
       modal.style.display = 'none';
-      pdfViewer.src = '';
+      pdfPreview.src = '';
     }
 
     window.onclick = function(event) {
