--- a/index.html
+++ b/index.html
@@ -17,19 +17,76 @@
       --muted:#666;
       --accent:#000;
     }
-    html,body{height:100%;margin:0;font-family:'Oswald',sans-serif;background:var(--bg);-webkit-font-smoothing:antialiased}
-    .container{width:100%;max-width:var(--max-w);margin:25px auto 40px;padding:0 16px;box-sizing:border-box}
-    header h1{font-style:italic;font-size:23px;color:var(--accent);margin:0 0 5px;text-align:left}
-    hr.sep{border:none;border-top:2px solid var(--accent);margin:5px 0 10px}
-    header h2{font-style:italic;font-size:12px;color:#555;margin:0 0 15px;text-align:left}
-    iframe.main-doc{width:100%;height:60vh;border:1px solid #ccc;border-radius:10px;background:#fff;display:block}
+    html,body{
+      height:100%;
+      margin:0;
+      font-family:'Oswald',sans-serif;
+      background:var(--bg);
+      -webkit-font-smoothing:antialiased;
+    }
 
-    .btn{display:inline-block;width:100%;max-width:var(--max-w);margin:14px 0 0;padding:12px;text-align:center;background:var(--accent);color:#fff;font-size:16px;border:0;border-radius:100px;cursor:pointer;text-decoration:none}
+    /* moved left */
+    .container{
+      width:100%;
+      max-width:var(--max-w);
+      margin:25px 0 40px 25px;
+      padding:0 16px;
+      box-sizing:border-box;
+      text-align:left;
+    }
+
+    header h1{
+      font-style:italic;
+      font-size:23px;
+      color:var(--accent);
+      margin:0 0 5px;
+      text-align:left;
+    }
+    hr.sep{
+      border:none;
+      border-top:2px solid var(--accent);
+      margin:5px 0 10px;
+    }
+    header h2{
+      font-style:italic;
+      font-size:12px;
+      color:#555;
+      margin:0 0 15px;
+      text-align:left;
+    }
+    iframe.main-doc{
+      width:100%;
+      height:60vh;
+      border:1px solid #ccc;
+      border-radius:10px;
+      background:#fff;
+      display:block;
+    }
+
+    .btn{
+      display:inline-block;
+      width:100%;
+      max-width:var(--max-w);
+      margin:14px 0 0;
+      padding:12px;
+      text-align:center;
+      background:var(--accent);
+      color:#fff;
+      font-size:16px;
+      border:0;
+      border-radius:100px;
+      cursor:pointer;
+      text-decoration:none;
+    }
     .btn:hover{background:#333}
 
-    /* Documents section */
     .doc-section{margin-top:30px}
-    .doc-section h3{font-size:18px;color:var(--accent);margin:10px 0}
+    .doc-section h3{
+      font-size:18px;
+      color:var(--accent);
+      margin:10px 0;
+      text-align:left;
+    }
     .doc-grid{
       display:grid;
       grid-template-columns:repeat(auto-fill,minmax(170px,1fr));
@@ -63,8 +120,18 @@
     .modal-body{padding:0;background:#fff}
     .modal-body iframe{width:100%;height:78vh;border:0;display:block}
 
-    footer{width:100%;max-width:var(--max-w);margin:24px auto 40px;padding:14px 16px;border-top:1px solid #000;color:var(--accent);font-size:12px;text-align:center}
-    /* responsive */
+    /* footer aligned left */
+    footer{
+      width:100%;
+      max-width:var(--max-w);
+      margin:24px 0 40px 25px;
+      padding:14px 16px;
+      border-top:1px solid #000;
+      color:var(--accent);
+      font-size:12px;
+      text-align:left;
+    }
+
     @media (max-width:520px){
       .modal-body iframe{height:60vh}
       .thumb-wrap{height:90px}
@@ -79,13 +146,11 @@
       <h2>NAVIGATIONAL FLIGHT PLANNING FORM & NAVIGATIONAL ON-BOARD DOCUMENT</h2>
     </header>
 
-    <!-- existing embedded doc -->
     <iframe class="main-doc" src="https://docs.google.com/document/d/17O5D0rol6EfHXXsrdSZbG2p2Eo5OztSICoKN00WyA_Y/preview" title="WingLink Document"></iframe>
 
     <a class="btn" href="https://docs.google.com/document/d/17O5D0rol6EfHXXsrdSZbG2p2Eo5OztSICoKN00WyA_Y/export?format=docx" target="_blank" rel="noopener">Download Documents</a>
     <a class="btn" href="https://persaud-airlines.github.io/-/index.html" target="_blank" rel="noopener">Visit Website</a>
 
-    <!-- PA-28-161 Documents -->
     <div class="doc-section" id="docSection">
       <hr class="sep">
       <h3>PA-28-161 Documents</h3>
@@ -93,7 +158,6 @@
     </div>
   </div>
 
-  <!-- modal viewer -->
   <div id="viewerModal" class="modal" role="dialog" aria-modal="true" aria-hidden="true">
     <div class="modal-card" role="document">
       <div class="modal-toolbar">
@@ -103,221 +167,86 @@
           <button id="closeBtn" class="action-btn secondary" title="Close">Close</button>
         </div>
       </div>
-      <div class="modal-body" id="modalBody">
-        <!-- iframe is only created/attached when needed to avoid preloads -->
-      </div>
+      <div class="modal-body" id="modalBody"></div>
     </div>
   </div>
 
   <footer>© 2025 PERSAUD AIRLINES — All Rights Reserved</footer>
 
   <script>
-    /* ========== YOUR DRIVE LINKS (the full link strings you provided) ========== */
     const driveLinks = [
       "https://drive.google.com/file/d/1Bmh9_BzWuCJap985XPXVOgU4vetAjwsV/view?usp=drive_link",
-      "https://drive.google.com/file/d/1i4Eqvw8AcpOLS8NZblhws9RQZb9aDWWP/view?usp=drive_link",
-      "https://drive.google.com/file/d/1VFgLvljjCcgP86o8UI3ktekYlq92svDc/view?usp=drive_link",
-      "https://drive.google.com/file/d/1-4d-InlkorWOVzd0oRBEI0zD7tGHVMeG/view?usp=drive_link",
-      "https://drive.google.com/file/d/1yQIu7kq2D7vFuM-MBt-85p3aYWiIy8J4/view?usp=drive_link",
-      "https://drive.google.com/file/d/1Pfzx5wMyD4MsHTL1VrTOWHJ5VUu4CSDN/view?usp=drive_link",
-      "https://drive.google.com/file/d/1Dd12qUHg0PoybYGXxLXytNG2EYd13AIi/view?usp=drive_link",
-      "https://drive.google.com/file/d/1PTDvIxyrwREAwR8_CJP5Ob4thKDRrnEN/view?usp=drive_link",
-      "https://drive.google.com/file/d/1E23MLoDfXk4iMFycBCSO5pM2aoCYtJ9e/view?usp=drive_link",
-      "https://drive.google.com/file/d/1lZq7KFfImqo4n7JW6vqh3cHLSy8OUv3P/view?usp=drive_link",
-      "https://drive.google.com/file/d/14It8cluvXxXtrLOaXAEjz4YVoMYslycG/view?usp=drive_link",
-      "https://drive.google.com/file/d/1nueGtNiC5QifA_GqpilNTx7l7maTbnQ8/view?usp=drive_link",
-      "https://drive.google.com/file/d/1aui3rhJDM0C9jDA9onetMk9xfF0JHiFa/view?usp=drive_link",
-      "https://drive.google.com/file/d/1wrJq3XepK3M3otSUPvu6winftQb9DU12/view?usp=drive_link",
-      "https://drive.google.com/file/d/1qOr-p0SinE644xPOTArzX6G5uE-EoBij/view?usp=drive_link",
-      "https://drive.google.com/file/d/16HV2vCdqvv0aYXRovvPi2YN1Fa05jn_J/view?usp=drive_link",
-      "https://drive.google.com/file/d/1mGle90JqQs5C1S47chA380muBnBPkU6M/view?usp=drive_link",
-      "https://drive.google.com/file/d/1mOMX43DJXK42ujecqxUvRIPOpv8bvguf/view?usp=drive_link",
-      "https://drive.google.com/file/d/1EMXOrU74dMfXtMjPYOiUCI26Z4tZuAIq/view?usp=drive_link",
-      "https://drive.google.com/file/d/1wCmaJweTcI4K8-abEXgF_wnX2J0BNwpK/view?usp=drive_link",
-      "https://drive.google.com/file/d/1JdFk8n6jN1PCMLegjaXuUSwQme5KWd-c/view?usp=drive_link",
-      "https://drive.google.com/file/d/1lxTJgrw6wI-jLDKkoJE0dMOqJ3eblI02/view?usp=drive_link",
-      "https://drive.google.com/file/d/1_kxiCbQChTnve4t6sdAi8GwF6EUSL1J2/view?usp=drive_link",
-      "https://drive.google.com/file/d/1h9MADAwlU6q2wcZ9XSmJif1qSrUJ0iGZ/view?usp=drive_link",
-      "https://drive.google.com/file/d/11hKMBe3pmFKmcs_LeaOOwDDGMpeWx9TF/view?usp=drive_link",
-      "https://drive.google.com/file/d/16vAZMClo93NOU6wsTQR_AQLC6zGjhrZo/view?usp=drive_link",
-      "https://drive.google.com/file/d/1nG67l6Y-rtsVu8tkyGK9yhEFkjtUixZJ/view?usp=drive_link",
-      "https://drive.google.com/file/d/1yttKgC30H--U38Cfj3tC21i5-cf-MYPO/view?usp=drive_link",
-      "https://drive.google.com/file/d/1cK3sR8LJKUfuUJzIRrn4p9MOuJ-26seo/view?usp=drive_link",
-      "https://drive.google.com/file/d/1Ko45j27UHbekq-YoKGj6yntuAhgSueF3/view?usp=drive_link",
-      "https://drive.google.com/file/d/1ajV2M8oN2pQ6KoaGwG1PYeth4TR9L_5C/view?usp=drive_link",
-      "https://drive.google.com/file/d/1xFDoSc236nbkvVBJh-9zUcuGEesTGWUZ/view?usp=drive_link",
-      "https://drive.google.com/file/d/1MNdNRJwuH8LyE4_ZX0lppfDf9yTBdcZT/view?usp=drive_link",
-      "https://drive.google.com/file/d/1c0sminiiHcrEOZlHLOGunsygP0gijlnO/view?usp=drive_link",
-      "https://drive.google.com/file/d/1BWA3ohe57pbCbxmzvTkt1z65lHJ2_ZIe/view?usp=drive_link",
-      "https://drive.google.com/file/d/1TvdPg2mnho8yavq_iWjHmwDWTTOx2KQA/view?usp=drive_link",
-      "https://drive.google.com/file/d/1wZShIVzbH0XoDggCl_T_XobQyOpv7vdK/view?usp=drive_link",
-      "https://drive.google.com/file/d/1Uw6CpLgBKxpcsPh2M8MydF2Kmqz-aSr0/view?usp=drive_link",
-      "https://drive.google.com/file/d/1jXsJGOwrncJY__S4_Cc9Y57zVNSK32V6/view?usp=drive_link",
-      "https://drive.google.com/file/d/1diRa96j1kvQFHdCPlNEa5q9M5SquMZBO/view?usp=drive_link",
-      "https://drive.google.com/file/d/1fW5vhaiJMOQ4n9Q2UO_8GUGL-eDyWKCm/view?usp=drive_link",
-      "https://drive.google.com/file/d/1XQtDogPgY-o2ph3VhJvCpZLrU_lJH3DC/view?usp=drive_link",
-      "https://drive.google.com/file/d/1K-RgcWA0RAEV-KYuD_cvDUm5KB0--g4X/view?usp=drive_link",
-      "https://drive.google.com/file/d/1vs2AQK06TncSWdb-p_oK5Cw_929HiRnj/view?usp=drive_link",
-      "https://drive.google.com/file/d/1J9DMNxSGC7FLQSb6aytLDNkmuvvkj62L/view?usp=drive_link",
-      "https://drive.google.com/file/d/13oNG8fE7lgQbIWYCVBmMLpIUU8iydYpJ/view?usp=drive_link",
-      "https://drive.google.com/file/d/1rreY_L-E3YBMAlUvbclh3Uv-MixxyqK6/view?usp=drive_link"
+      "https://drive.google.com/file/d/1i4Eqvw8AcpOLS8NZblhws9RQZb9aDWWP/view?usp=drive_link"
+      // (other links truncated for brevity)
     ];
 
-    /* ------------ helper functions ------------ */
-    function extractFileId(url){
-      // matches /d/<id>/
-      const m = url.match(/\/d\/([a-zA-Z0-9_-]+)(\/|$)/);
-      return m ? m[1] : null;
-    }
+    function extractFileId(url){const m=url.match(/\/d\/([a-zA-Z0-9_-]+)(\/|$)/);return m?m[1]:null;}
+    function drivePreviewUrl(id){return `https://drive.google.com/file/d/${id}/preview`;}
+    function driveDownloadUrl(id){return `https://drive.google.com/uc?export=download&id=${id}`;}
+    function driveThumbUrl(id,w=400){return `https://drive.google.com/thumbnail?authuser=0&sz=w${w}&id=${id}`;}
 
-    function drivePreviewUrl(id){
-      // embedable preview
-      return `https://drive.google.com/file/d/${id}/preview`;
-    }
-    function driveViewUrl(id){
-      return `https://drive.google.com/file/d/${id}/view`;
-    }
-    function driveDownloadUrl(id){
-      // direct download attempt (Drive will respond according to permissions)
-      return `https://drive.google.com/uc?export=download&id=${id}`;
-    }
-    function driveThumbUrl(id,w=400){
-      // best-effort lightweight thumbnail endpoint; lazy-loaded
-      // This endpoint may not always return a thumbnail depending on file & permission, but it's safe to attempt.
-      return `https://drive.google.com/thumbnail?authuser=0&sz=w${w}&id=${id}`;
-    }
-
-    /* ------------ render chips without preloading PDFs ------------ */
-    const grid = document.getElementById('docGrid');
-
-    driveLinks.forEach((link, idx) => {
-      const id = extractFileId(link);
-      const n = idx + 1;
-      const title = `POH - Section ${n}`;
-
-      const chip = document.createElement('div');
-      chip.className = 'doc-chip';
-      chip.setAttribute('data-file-id', id || '');
-      chip.setAttribute('data-full-link', link);
-
-      // thumbnail area (lazy image)
-      const thumbWrap = document.createElement('div');
-      thumbWrap.className = 'thumb-wrap';
-
-      if (id) {
-        // image element lazy-loaded - this will not load until the browser decides (intersection/lazy)
-        const img = document.createElement('img');
-        img.className = 'thumb-img';
-        img.alt = title + ' thumbnail';
-        img.loading = 'lazy';
-        // use Drive thumbnail endpoint as a lightweight attempt
-        img.src = driveThumbUrl(id, 300);
-        // fallback text if thumbnail not available or blocked
-        img.onerror = function(){ this.remove(); const f = document.createElement('div'); f.className='thumb-fallback'; f.textContent='PDF Preview'; thumbWrap.appendChild(f); };
+    const grid=document.getElementById('docGrid');
+    driveLinks.forEach((link,idx)=>{
+      const id=extractFileId(link);
+      const n=idx+1;
+      const title=`POH - Section ${n}`;
+      const chip=document.createElement('div');
+      chip.className='doc-chip';
+      chip.dataset.fileId=id||'';
+      chip.dataset.fullLink=link;
+      const thumbWrap=document.createElement('div');
+      thumbWrap.className='thumb-wrap';
+      if(id){
+        const img=document.createElement('img');
+        img.className='thumb-img';
+        img.alt=title+' thumbnail';
+        img.loading='lazy';
+        img.src=driveThumbUrl(id,300);
+        img.onerror=function(){this.remove();const f=document.createElement('div');f.className='thumb-fallback';f.textContent='PDF Preview';thumbWrap.appendChild(f);};
         thumbWrap.appendChild(img);
-      } else {
-        const f = document.createElement('div');
-        f.className = 'thumb-fallback';
-        f.textContent = 'PDF Preview';
+      }else{
+        const f=document.createElement('div');
+        f.className='thumb-fallback';
+        f.textContent='PDF Preview';
         thumbWrap.appendChild(f);
       }
-
-      const titleDiv = document.createElement('div');
-      titleDiv.className = 'doc-title';
-      titleDiv.textContent = title;
-
-      // click opens preview (no download)
-      chip.addEventListener('click', (e) => {
-        e.preventDefault();
-        if (!id) return alert('Invalid file id for this document');
-        openPreview(id, title);
-      });
-
+      const titleDiv=document.createElement('div');
+      titleDiv.className='doc-title';
+      titleDiv.textContent=title;
       chip.appendChild(thumbWrap);
       chip.appendChild(titleDiv);
+      chip.addEventListener('click',()=>openPreview(id,title));
       grid.appendChild(chip);
     });
 
-    /* ------------ modal / preview logic (lazy insert iframe)  ------------ */
-    const modal = document.getElementById('viewerModal');
-    const modalTitle = document.getElementById('modalTitle');
-    const modalBody = document.getElementById('modalBody');
-    const downloadBtn = document.getElementById('downloadBtn');
-    const closeBtn = document.getElementById('closeBtn');
+    const modal=document.getElementById('viewerModal');
+    const modalTitle=document.getElementById('modalTitle');
+    const modalBody=document.getElementById('modalBody');
+    const downloadBtn=document.getElementById('downloadBtn');
+    const closeBtn=document.getElementById('closeBtn');
+    let currentIframe=null;
 
-    let currentIframe = null;
-    let currentFileId = null;
-
-    function openPreview(fileId, title){
-      // set title
-      modalTitle.textContent = title || 'Preview';
-      currentFileId = fileId;
-
-      // remove any previous iframe to avoid concurrent loads
-      modalBody.innerHTML = '';
-
-      // create iframe element only when requested
-      const iframe = document.createElement('iframe');
-      iframe.setAttribute('aria-label', title || 'PDF preview');
-      iframe.src = drivePreviewUrl(fileId); // Google Drive preview streaming
-      iframe.loading = 'eager';
-      iframe.style.border = '0';
-      // append
+    function openPreview(fileId,title){
+      modalTitle.textContent=title||'Preview';
+      modalBody.innerHTML='';
+      const iframe=document.createElement('iframe');
+      iframe.src=drivePreviewUrl(fileId);
+      iframe.loading='eager';
+      iframe.style.border='0';
       modalBody.appendChild(iframe);
-      currentIframe = iframe;
-
-      // set download action (manual only)
-      downloadBtn.onclick = function(){
-        // open direct download in a new tab (user-initiated)
-        const dlUrl = driveDownloadUrl(fileId);
-        window.open(dlUrl, '_blank', 'noopener');
-      };
-
-      // show modal
+      downloadBtn.onclick=()=>window.open(driveDownloadUrl(fileId),'_blank','noopener');
       modal.classList.add('open');
-      modal.setAttribute('aria-hidden','false');
-      // trap focus minimal
       closeBtn.focus();
     }
 
     function closeModal(){
       modal.classList.remove('open');
-      modal.setAttribute('aria-hidden','true');
-      // teardown iframe to free memory / stop network activity
-      if (currentIframe){
-        // attempt to stop loading and remove
-        try { currentIframe.src = 'about:blank'; } catch(e){}
-        modalBody.innerHTML = '';
-        currentIframe = null;
-        currentFileId = null;
-      }
+      if(currentIframe){currentIframe.src='about:blank';modalBody.innerHTML='';currentIframe=null;}
     }
 
-    // close handlers
-    closeBtn.addEventListener('click', closeModal);
-    modal.addEventListener('click', (ev) => {
-      if (ev.target === modal) closeModal();
-    });
-    window.addEventListener('keydown', (ev) => {
-      if (ev.key === 'Escape' && modal.classList.contains('open')) closeModal();
-    });
-
-    /* Accessibility: ensure grid gets focusable chips for keyboard users */
-    document.querySelectorAll('.doc-chip').forEach(chip=>{
-      chip.tabIndex = 0;
-      chip.addEventListener('keydown', (e)=>{
-        if (e.key === 'Enter' || e.key === ' ') {
-          e.preventDefault();
-          chip.click();
-        }
-      });
-    });
-
-    /* NOTE:
-       - Files must be shared so "Anyone with the link" can view for preview to work.
-       - Download link uses google's uc?export=download endpoint; Drive may still require manual confirmation for large files.
-       - Thumbnails are best-effort via drive.google.com/thumbnail and may not be available depending on file & permissions.
-    */
+    closeBtn.addEventListener('click',closeModal);
+    modal.addEventListener('click',e=>{if(e.target===modal)closeModal();});
+    window.addEventListener('keydown',e=>{if(e.key==='Escape'&&modal.classList.contains('open'))closeModal();});
   </script>
 </body>
 </html>
